--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
+  "name": "nonskuy-backend",
+  "version": "1.0.0",
+  "description": "Api for Nonskuy App",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/index.js",
+    "dev": "nodemon api/index.js",
+    "build": "webpack"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4"
   }
 }
