--- a/package.json
+++ b/package.json
@@ -2,21 +2,32 @@
   "name": "nonskuy-backend",
   "version": "1.0.0",
   "description": "Api for Nonskuy App",
-  "main": "index.js",
+  "main": "api/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
-    "dev": "nodemon api/index.js",
-    "build": "webpack"
+    "build": "npx tsc",
+    "start": "nodemon dist/app.js",
+    "dev": "nodemon api/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemon": "^3.1.7"
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.7",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.5.0",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   }
