--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^5.0.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "joi": "^17.13.3",
